Refactorings performed to improve performance (reduce memory consumption)